# dll-icon-forge

./: .gitignore  CHANGELOG.txt  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  sonar-project.properties  tsconfig.json  vite.config.ts  vitest.config.ts
.docker/: docker-compose.sonar.yml
.github/workflows/: ci.yml  release.yml
docs/: index.html  site-content.json  styles.css
docs/de/: index.html
docs/en/: index.html
docs/es/: index.html
docs/fr/: index.html
docs/it/: index.html
scripts/: build-pages.cjs  normalize-rust-lcov.cjs  rewrite-git-email.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  installer-template.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: build_cache.rs  lib.rs  main.rs
src-tauri/src/dll/: build.rs  decode.rs  mod.rs  parse.rs  pe_resource.rs  read.rs  template.rs  types.rs  update.rs  write.rs
src-tauri/src/icons/: convert.rs  errors.rs  mod.rs  read.rs  types.rs
src/components/: HomeView.vue  ItemView.vue
src/components/buttons/: LanguageButton.vue  LanguageDropdown.vue  ThemeButton.vue
src/components/common/: ConfirmDialog.vue  FileDropZone.vue  LanguageButton.vue  MenuTab.vue  PageFooter.vue  PageHeader.vue  PageSizeSelector.vue  PaginationControls.vue  PreviewTab.vue
src/components/crop/: SquareCropper.vue
src/components/dialogs/: ConfirmDialog.vue  ImageCropDialog.vue
src/components/explorer/: IconCollectionView.vue  IconGridView.vue  IconListView.vue  MenuTab.vue
src/components/layout/: PageFooter.vue  PageHeader.vue  PageLoader.vue  TitleBar.vue
src/components/pagination/: PageSizeSelector.vue  PaginationControls.vue
src/components/upload/: FileDropZone.vue
src/composables/: useConfirmDialogs.ts  useCrop.ts  useFileUpload.ts  useItemMeta.ts
src/i18n/: index.ts
src/locales/: de.json  en.json  es.json  fr.json  it.json
src/services/: notifications.ts  tauriProject.ts
src/stores/: project.ts  settings.ts
src/stores/projectModules/: files.ts  pagination.ts  resources.ts  submit.ts
src/styles/: main.scss
src/styles/partials/: _placeholders.scss  _reset.scss  _vars.scss
src/types/: Icon.ts  Project.ts  build.ts  icons.ts  index.ts  modes.ts  notifications.ts  tauri.ts
src/views/: HomeView.vue  ItemView.vue
tests/frontend/: App.spec.ts  main.spec.ts
tests/frontend/assets/services/: autostart.spec.ts  notifications.spec.ts
tests/frontend/components/: HomeView.spec.ts  ItemView.spec.ts
tests/frontend/components/common/: ConfirmDialog.spec.ts  FileDropZone.spec.ts  IconCollectionView.spec.ts  IconGridView.spec.ts  IconListView.spec.ts  LanguageButton.spec.ts  MenuTab.spec.ts  PageFooter.spec.ts  PageHeader.spec.ts  PageSizeSelector.spec.ts  (+3 more)
tests/frontend/helpers/: mount.ts
tests/frontend/services/: notifications.spec.ts
tests/frontend/stores/: files.spec.ts  project.spec.ts  settings.spec.ts
tests/frontend/types/: Project.spec.ts
(+1 files in other folders)
