[package]
name = "win-dll-packer"
version = "0.1.0"
description = "Dll icon packer for windows"
authors = ["ValerioGc"]
edition = "2024"
license = "Unlicense"
default-run = "win-dll-packer"

[lib]
name = "win_dll_packer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
