[package]
name = "dll-icon-forge"
version = "0.1.0"
description = "DLL icon library creator and editor for Windows"
authors = ["ValerioGc"]
edition = "2024"
license = "Unlicense"
default-run = "dll-icon-forge"

[lib]
name = "dll_icon_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
ico = "0.3"
resvg = { version = "0.44", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
